Feito integração com o back-end e quase terminado a responsividade pro mobile

--- a/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product-info/product-info.component.html
@@ -9,7 +9,7 @@
         <h5>{{ product?.name }}</h5>
         <div class="id-box ml-2 d-flex align-items-center">
           <i class="pi pi-ticket mr-2"></i>
-          <span>{{ product?.sap }}</span>
+          <span>{{ product?.code }}</span>
         </div>
       </div>
       <p class="mb-0">
