--- a/src/app/pages/ncs/create/steps/step2/product/product.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.css
@@ -23,8 +23,6 @@
 .input-box label {
   font-size: 13px;
   font-weight: bold;
-  top: -13px;
-  position: absolute;
 }
 .autoComplete-item h4 {
   font-size: 18px;
@@ -40,4 +38,7 @@
   font-weight: 400;
   color: #7d7d7d;
   white-space: normal !important;
+}
+.red {
+  flex-direction: column;
 }
