--- a/src/app/pages/ncs/create/steps/step2/step2.component.html
+++ b/src/app/pages/ncs/create/steps/step2/step2.component.html
@@ -4,7 +4,7 @@
 
 <hr class="mb-5 mt-5" />
 
-<div class="row">
+<div class="row points-box">
   <div class="col">
     <app-checkpoint [hasProduct]="hasSelectedProduct"></app-checkpoint>
   </div>
