adicionado novos arquivos exemplos, imports de local e setor, e services de updateDate

--- a/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/identificacao-da-nc/identificacao-da-nc.component.html
@@ -31,8 +31,13 @@
       <label for="">Local ou Setor Afetado</label>
       <select [(ngModel)]="tiposLocalItem">
         <option value="" disabled selected hidden>Selecione...</option>
-        <option *ngFor="let tiposLocalSetor of tiposLocalSetor">
-          {{ tiposLocalSetor }}
+        <option class="option-titulo" disabled>Setor</option>
+        <option *ngFor="let item of sectors">
+          {{ item.name }}
+        </option>
+        <option class="option-titulo" disabled>Local</option>
+        <option *ngFor="let item of places">
+          {{ item.name }}
         </option>
       </select>
     </div>
