--- a/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
+++ b/src/app/pages/ncs/create/steps/step1/parceiro/parceiro.component.html
@@ -42,7 +42,7 @@
   </div>
 
   <div class="col-2" id="div-att-col2">
-    <p>Última atualização: Há 3 minutos</p>
+    <p>Última atualização: {{ returnUpdateTime() }}</p>
 
     <a
       href="http://localhost:4200/ncs/import"
@@ -58,7 +58,7 @@
 <div class="row row-search">
   <div class="dropdown col">
     <label>Tipo de Parceiro</label>
-    <select [(ngModel)]="tiposParceiroItem">
+    <select [(ngModel)]="tiposParceiroItem" (change)="onChange()">
       <option value="" disabled selected hidden>Selecione...</option>
       <option *ngFor="let tiposAuditoria of tiposParceiro">
         {{ tiposAuditoria }}
@@ -72,6 +72,7 @@
         [(ngModel)]="pesquisar"
         [suggestions]="results"
         (completeMethod)="search($event)"
+        (onSelect)="onSelected()"
         field="corporate_name"
         [style]="{ width: '100%' }"
         [inputStyle]="{ width: '100%' }"
@@ -108,15 +109,6 @@
           </div>
         </ng-template>
       </p-autoComplete>
-
-      <button
-        href="http://localhost:4200/ncs/import"
-        class="btn btn-dark"
-        type="button"
-        (click)="onSelected()"
-      >
-        Buscar <i class="pi pi-search"></i>
-      </button>
     </div>
   </div>
 </div>
@@ -126,9 +118,13 @@
 <div class="div-ident-parceiro row" *ngIf="isSelected">
   <h1 class="titulo-parceiro">Dados do Parceiro</h1>
   <div class="dados-parceiro col razao-social">
-    <h1>Razão Social</h1>
-    <p>
+    <h1 *ngIf="!isInterno()">Razão Social</h1>
+    <h1 *ngIf="isInterno()">Setor</h1>
+    <p *ngIf="!isInterno()">
       {{ selected.corporate_name }}
+    </p>
+    <p *ngIf="isInterno()">
+      {{ selected.name }}
     </p>
   </div>
   <div class="dados-parceiro col">
@@ -149,7 +145,9 @@
         <div>
           <span class="info-titulo">Nome</span>
           <br />
-          <span class="info-dados">{{ selected.responsible_name }}</span>
+          <span class="info-dados" *ngIf="!isInterno()">{{
+            selected.responsible_name
+          }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -157,7 +155,9 @@
         <div>
           <span class="info-titulo">Telefone</span>
           <br />
-          <span class="info-dados">{{ selected.responsible_phone }}</span>
+          <span class="info-dados" *ngIf="!isInterno()">{{
+            selected.responsible_phone
+          }}</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -165,7 +165,9 @@
         <div>
           <span class="info-titulo">E-mail</span>
           <br />
-          <span class="info-dados">{{ selected.responsible_email }}</span>
+          <span class="info-dados" *ngIf="!isInterno()">{{
+            selected.responsible_email
+          }}</span>
         </div>
       </div>
     </div>
