Finalizado responsividade do passo 2 e feito responsividade do header

--- a/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
+++ b/src/app/pages/ncs/create/ncs-create-stepper/ncs-create-stepper.component.html
@@ -12,7 +12,7 @@
         [disabled]="isFirstStep()"
       ></button>
     </div>
-    <div class="col-8">
+    <div class="col-8 stepper">
       <p-steps
         [model]="items"
         [readonly]="true"
