--- a/src/app/pages/ncs/create/waiting-product/waiting-product.component.css
+++ b/src/app/pages/ncs/create/waiting-product/waiting-product.component.css
@@ -18,3 +18,11 @@ h4 {
   font-size: 20px;
   line-height: 33px;
 }
+@media (max-width: 600px) {
+  .image-box img {
+    padding: 10px;
+  }
+  .image-box img {
+    width: 100%;
+  }
+}
