--- a/src/app/pages/ncs/create/steps/step2/product/product.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.css
@@ -39,6 +39,7 @@
   color: #7d7d7d;
   white-space: normal !important;
 }
-.red {
-  flex-direction: column;
+.inputs-sm {
+  position: relative;
+  top: -12px;
 }
