--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -50,7 +50,7 @@
       </div>
     </div>
     <div class="col-lg-8 d-flex col-12 flex-column flex-lg-row">
-      <div class="d-flex flex-column mr-lg-3 my-auto">
+      <div class="d-flex flex-column mr-lg-3 inputs-sm my-auto">
         <label for="amountNC">Quantidade de NC</label>
         <input
           name="amountNC"
@@ -60,7 +60,7 @@
           class="p-inputtext-sm"
         />
       </div>
-      <div class="d-flex flex-column my-auto mt-3">
+      <div class="d-flex flex-column inputs-sm my-auto">
         <label for="amountTotal">Quantidade Total</label>
         <input
           name="amountTotal"
@@ -70,7 +70,7 @@
           class="p-inputtext-sm"
         />
       </div>
-      <div class="d-flex flex-column pl-lg-3 pt-3 pt-lg-0 mb-3">
+      <div class="d-flex flex-column pl-lg-3 pt-3 pt-lg-0 mb-lg-0 mb-2">
         <p-radioButton
           name="ncType"
           label="Não conformidade real"
