criacao de service da nc

--- a/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step1/descricao-nc/descricao-nc.component.html
@@ -11,7 +11,7 @@
     <label>Descreva a não conformidade</label>
     <p-editor
       [style]="{ height: '210px' }"
-      [(ngModel)]="textAreaNc"
+      [(ngModel)]="this.nonComplicanceService.textAreaNc"
       class="p-editor"
     ></p-editor>
   </div>
@@ -19,7 +19,10 @@
     <label>Anexe evidências objetivas ou fotográficas</label>
     <div class="div-attachment">
       <h1>Envie seus documentos</h1>
-      <div class="white-background" *ngIf="fileNameNc.length == 0">
+      <div
+        class="white-background"
+        *ngIf="nonComplicanceService.fileNc.length == 0"
+      >
         <input
           type="file"
           class="input-attachment"
@@ -31,11 +34,16 @@
           Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
         </p>
       </div>
-      <div class="white-background-files" *ngIf="fileNameNc.length != 0">
+      <div
+        class="white-background-files"
+        *ngIf="nonComplicanceService.fileNc.length != 0"
+      >
         <button type="button" (click)="clearFileNameNc()" class="btn btn-light">
           <i class="pi pi-replay"></i>
         </button>
-        <p *ngFor="let files of fileNameNc">{{ files }}</p>
+        <p *ngFor="let files of nonComplicanceService.fileNc">
+          {{ files.name }}
+        </p>
       </div>
     </div>
   </div>
@@ -56,14 +64,17 @@
     <label for="desc-area">Descreve as ações imediatas</label>
     <p-editor
       [style]="{ height: '210px' }"
-      [(ngModel)]="textAreaAcoes"
+      [(ngModel)]="this.nonComplicanceService.textAreaAcoes"
     ></p-editor>
   </div>
   <div class="col-3 col-attachment">
     <label for="desc-area">Anexe evidências objetivas ou fotográficas</label>
     <div class="div-attachment">
       <h1>Envie seus documentos</h1>
-      <div class="white-background" *ngIf="fileNameAcoes.length == 0">
+      <div
+        class="white-background"
+        *ngIf="nonComplicanceService.fileAcoes.length == 0"
+      >
         <input
           type="file"
           class="input-attachment"
@@ -75,7 +86,10 @@
           Arraste e solte ou <strong>navegue para escolher</strong> um arquivo
         </p>
       </div>
-      <div class="white-background-files" *ngIf="fileNameAcoes.length != 0">
+      <div
+        class="white-background-files"
+        *ngIf="nonComplicanceService.fileAcoes.length != 0"
+      >
         <button
           type="button"
           (click)="clearFileNameAcoes()"
@@ -83,7 +97,9 @@
         >
           <i class="pi pi-replay"></i>
         </button>
-        <p *ngFor="let files of fileNameAcoes">{{ files }}</p>
+        <p *ngFor="let files of nonComplicanceService.fileAcoes">
+          {{ files.name }}
+        </p>
       </div>
     </div>
   </div>
