--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.css
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.css
@@ -17,3 +17,12 @@ h2 {
     font-size: 15px;
     color: gray;
 }
+.tudo{
+
+}
+.p-accordion-content{
+    background-color: rgb(243, 243, 243);
+}
+.p-accordion{
+    background-color: red;
+}
