--- a/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
+++ b/src/app/pages/ncs/create/steps/step4/products-and-points/products-and-points.component.html
@@ -1,77 +1,88 @@
-<div>
-    <h2>
-        Dados do Produto
-    </h2>
-    <div class="d-flex">
-        <div class="col-6">
-            <div class="d-flex">
-                <h2 class="mr-2">Caixa de Pandora</h2>
-                <p-chip>
-                    <i class="bi bi-ticket-perforated mr-2"></i>
-                    {{464646}}
-                </p-chip>
-            </div>
-            <div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, animi aperiam architecto, dicta ducimus eius et eum neque nobis numquam praesentium quod recusandae saepe sunt voluptatum. A assumenda consequuntur perferendis.
-                </p>
-            </div>
+<div class="div-ident-parceiro row">
+    <h1 class="titulo-parceiro">Dados do Produto</h1>
+    <div class="dados-parceiro col razao-social">
+        <div class="d-flex">
+            <h2 class="mr-2">Caixa de Pandora</h2>
+            <p-chip>
+                <i class="bi bi-ticket-perforated mr-2"></i>
+                {{464646}}
+            </p-chip>
         </div>
-        <div>
-            <h2>
-                Dados de NC
-            </h2>
-            <h3>Quantidade Total</h3>
-            <p>2500</p>
-            <h3>Quantidade em Não Conformidade</h3>
-            <p>150</p>
-            <h3>
+        <p class="d-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus facere magni mollitia sapiente. Ea eum libero nihil quam quas sed unde vitae? Aliquam commodi debitis eos labore maiores, officiis pariatur.</p>
+    </div>
+    <div class="dados-parceiro col">
+        <div class="dados-contato">
+            <div class="d-flex justify-content-between">
+                <h2>Dados de NC</h2>
+            </div>
+            <div class="contato-info d-flex flex-row">
+                <i class="bi bi-calculator"></i>
+                <div>
+                    <span class="info-titulo">Quantidade Total</span>
+                    <br />
+                    <span class="info-dados">2500</span>
+                </div>
+            </div>
+            <div class="contato-info d-flex flex-row">
+                <i class="bi bi-calculator"></i>
+                <div>
+                    <span class="info-titulo">Quantidade em Não Conformidade</span>
+                    <br />
+                    <span class="info-dados">150</span>
+                </div>
+            </div>
+            <div class="contato-info d-flex flex-row">
                 <i class="bi bi-percent"></i>
-                Percentual
-            </h3>
-            <p>6%</p>
+                <div>
+                    <span class="info-titulo">Percentual</span>
+                    <br />
+                    <span class="info-dados">sfsdfsdf</span>
+                </div>
+            </div>
         </div>
     </div>
-
 </div>
-<div>
+<div class="div-ident-parceiro mt-3">
     <h2>
         <i class="bi bi-people"></i>
         Ponto de Controle
     </h2>
     <div class="d-flex">
         <div class="col-6">
-            <h3>
-                Instrução
-            </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing e</p>
+            <div>
+                <i class="pi pi-directions"></i>
+                <span class="info-titulo">Instrução</span>
+            </div>
+            <span class="info-dados">Lorem ipsum dolor sit amet, consectetur adipisicing e</span>
         </div>
         <div>
-            <h3>
-                Número de Controle
-            </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <div>
+                <i class="bi bi-calculator"></i>
+                <span class="info-titulo">Número de Controle</span>
+            </div>
+            <p class="info-dados">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
     </div>
 </div>
-<div>
+<div class="div-ident-parceiro mt-3">
     <h2>
         <i class="bi bi-people"></i>
         Ponto de Rejeição
     </h2>
     <div class="d-flex">
         <div class="col-6">
-            <h3>
-                Instrução
-            </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing e</p>
+            <div>
+                <i class="pi pi-directions"></i>
+                <span class="info-titulo">Instrução</span>
+            </div>
+            <p class="info-dados">Lorem ipsum dolor sit amet, consectetur adipisicing e</p>
         </div>
         <div>
-            <h3>
+            <div>
                 <i class="bi bi-chat-text"></i>
-                Resposta
-            </h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <span class="info-titulo">Resposta</span>
+            </div>
+            <p class="info-dados">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div>
     </div>
 </div>
