--- a/src/app/pages/ncs/create/steps/step2/step2.component.html
+++ b/src/app/pages/ncs/create/steps/step2/step2.component.html
@@ -7,7 +7,10 @@
     </p>
   </div>
   <div class="button-box">
-    <span> <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span>
+    <span>
+      <i class="pi pi-history"></i> ultima atualização:
+      {{ returnUpdateTime() }}</span
+    >
     <button
       pButton
       pRipple
