--- a/src/app/pages/ncs/create/steps/step2/product/product.component.html
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.html
@@ -9,20 +9,22 @@
       </p>
     </div>
     <div class="button-box col-12 col-lg-4 mb-4 mb-lg-0">
-      <span>
-        <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span
-      >
-      <a href="ncs/import" class="text-decoration-none">
-        <button
-          pButton
-          pRipple
-          type="button"
-          class="p-button-secondary"
-          label="Atualizar Cadastros"
-          icon="pi pi-download"
-          iconPos="right"
-        ></button>
-      </a>
+      <div class="update-box">
+        <span class="update-text">
+          <i class="pi pi-history"></i> ultima atualização: Há 3 minutos</span
+        >
+        <a href="ncs/import" class="text-decoration-none">
+          <button
+            pButton
+            pRipple
+            type="button"
+            class="p-button-secondary"
+            label="Atualizar Cadastros"
+            icon="pi pi-download"
+            iconPos="right"
+          ></button>
+        </a>
+      </div>
     </div>
   </div>
 </div>
