hotfix: deixa os botões no mesmo padrão de cor e remove bug no accordion

--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -1,14 +1,11 @@
 <div class="header-create-nc">
   <div class="p-0 col-6">
     <div class="d-flex">
-      <button
-        pButton
-        pRipple
-        type="button"
-        label="Início"
-        class="p-button-secondary"
-        icon="pi pi-home"
-      ></button>
+      <button type="button"
+              class="btn btn-dark">
+        <i class="pi pi-home"></i>
+        Início
+      </button>
       <div class="text-box">
         <p>Nova Não Conformidade</p>
       </div>
@@ -16,24 +13,16 @@
   </div>
   <div class="col-6 d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button
-        pButton
-        pRipple
-        type="button"
-        label="Cancelar"
-        class="p-button-outlined p-button-secondary mr-2"
-        iconPos="right"
-        icon="pi pi-times"
-      ></button>
-      <button
-        pButton
-        pRipple
-        type="button"
-        label="Salvar"
-        class="p-button-secondary"
-        iconPos="right"
-        icon="pi pi-save"
-      ></button>
+      <button type="button"
+              class="btn btn-outline-dark mr-2">
+        Cancelar
+        <i class="pi pi-times"></i>
+      </button>
+      <button type="button"
+              class="btn btn-dark">
+        Salvar
+        <i class="pi pi-save"></i>
+      </button>
     </div>
   </div>
 </div>
