--- a/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
+++ b/src/app/pages/ncs/create/steps/step2/checkpoint/checkpoint.component.html
@@ -44,13 +44,9 @@
             </div>
           </div>
           <div class="d-flex justify-content-center mt-3">
-            <button
-              pButton
-              pRipple
-              type="button"
-              label="Visualizar instrução de Trabalho"
-              class="p-button-secondary"
-            ></button>
+            <button type="button" class="btn btn-dark">
+              Visualizar instrução de Trabalho
+            </button>
           </div>
         </div>
       </div>
