--- a/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
+++ b/src/app/pages/ncs/create/steps/step2/rejection-point/rejection-point.component.html
@@ -13,13 +13,9 @@
       [(ngModel)]="textAreaAcoes"
     ></p-editor>
     <div class="d-flex justify-content-center mt-3">
-      <button
-        pButton
-        pRipple
-        type="button"
-        label="Visualizar Documento"
-        class="p-button-secondary"
-      ></button>
+      <button type="button" class="btn btn-dark">
+        Visualizar Documento
+      </button>
     </div>
   </div>
 </div>
