--- a/src/app/pages/ncs/create/steps/step2/product/product.component.css
+++ b/src/app/pages/ncs/create/steps/step2/product/product.component.css
@@ -47,3 +47,11 @@
   display: flex;
   flex-direction: column;
 }
+.p-autocomplete{
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+}
+.input{
+  border-radius: 5px;
+  border: 2px solid rgb(51, 51, 51);
+}
