--- a/src/app/pages/ncs/create/steps/step4/revisar-info.component.css
+++ b/src/app/pages/ncs/create/steps/step4/revisar-info.component.css
@@ -17,12 +17,7 @@ h2 {
     font-size: 15px;
     color: gray;
 }
-.tudo{
 
-}
-.p-accordion-content{
-    background-color: rgb(243, 243, 243);
-}
-.p-accordion{
-    background-color: red;
+:host /deep/ .p-accordion .p-accordion-header:hover a{
+    text-decoration: none ;
 }
