conlcuído responsividade do header e feito parcialmente a responsividade do step 4

--- a/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
+++ b/src/app/pages/ncs/create/ncs-create-header/ncs-create-header.component.html
@@ -1,8 +1,7 @@
 <div class="header-create-nc">
-  <div class="p-0 col-6">
+  <div class="p-0">
     <div class="d-flex">
-      <button type="button"
-              class="btn btn-dark">
+      <button type="button" class="btn btn-dark">
         <i class="pi pi-home"></i>
         Início
       </button>
@@ -11,15 +10,13 @@
       </div>
     </div>
   </div>
-  <div class="col-6 d-flex justify-content-end p-0">
+  <div class="d-flex justify-content-end p-0">
     <div class="d-flex buttons">
-      <button type="button"
-              class="btn btn-outline-dark mr-2">
+      <button type="button" class="btn btn-outline-dark mr-2">
         Cancelar
         <i class="pi pi-times"></i>
       </button>
-      <button type="button"
-              class="btn btn-dark">
+      <button type="button" class="btn btn-dark">
         Salvar
         <i class="pi pi-save"></i>
       </button>
