--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.css
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.css
@@ -88,6 +88,9 @@
   margin-top: 8px;
   height: 35px;
 }
+.item {
+  width: 100%;
+}
 .card-data {
   background-color: white;
   border-radius: 7px;
