--- a/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
+++ b/src/app/pages/ncs/create/steps/step4/identify-nc/identify-nc.component.html
@@ -1,16 +1,16 @@
-<div class="div-ident-parceiro d-flex mt-3">
+<div class="div-ident-parceiro d-flex mt-3 flex-column flex-lg-row">
   <div class="div-ident-parceiro">
     <h2>
       <i class="bi bi-card-text"></i>
       Dados de Identificação
     </h2>
-    <div class="d-flex card-data justify-content-evenly">
+    <div class="d-flex justify-content-between flex-column flex-lg-row">
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-ticket-perforated mr-1"></i>
         <div>
           <span class="info-titulo">Número</span>
           <br />
-          <p class="info-dados">544554</p>
+          <span class="info-dados">544554</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
@@ -18,102 +18,109 @@
         <div>
           <span class="info-titulo">Data de Abertura</span>
           <br />
-          <p class="info-dados">26/04/2022</p>
+          <span class="info-dados">26/04/2022</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calendar-week mr-1"></i>
         <div>
           <span class="info-titulo">Data de Fechamento</span>
-          <br />
-          <p class="info-dados">26/04/2022</p>
+          <br/>
+          <span class="info-dados">26/04/2022</span>
         </div>
       </div>
     </div>
   </div>
-  <p-divider layout="vertical"></p-divider>
+  <p-divider class="test1" layout="vertical"></p-divider>
   <div class="div-ident-parceiro">
     <h2>
-      <i class="bi bi-people"></i>
+      <i class="bi bi-people mr-1"></i>
       Dados de Emissão
     </h2>
-    <div class="d-flex card-data justify-content-evenly">
+    <div class="d-flex justify-content-between flex-column flex-lg-row">
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-person-circle mr-1"></i>
         <div>
           <span class="info-titulo">Emissor</span>
-          <br />
-          <p class="info-dados">Elias</p>
+          <br/>
+          <span class="info-dados">Elias</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-person-circle mr-1"></i>
         <div>
           <span class="info-titulo">Responsável</span>
-          <br />
-          <p class="info-dados">Janaína</p>
+          <br/>
+          <span class="info-dados">Janaína</span>
         </div>
       </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-geo-alt mr-1"></i>
         <div>
           <span class="info-titulo">Departamento</span>
-          <br />
+          <br>
           <p class="info-dados">Rh</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="div-ident-parceiro row mt-3">
+<div class="div-ident-parceiro mt-3">
   <h1 class="titulo-parceiro">Dados do Parceiro</h1>
-  <div class="dados-parceiro col razao-social">
-    <div class="d-flex">
-      <h2 class="mr-2">Razão Social</h2>
-      <p-chip class="mt-2">
-        <i class="bi bi-ticket-perforated mr-2"></i>
-        {{ 8411684 }}
-      </p-chip>
+  <div class="d-flex">
+    <div class="item">
+      <div class="dados-parceiro razao-social">
+        <div class="d-flex">
+          <h2 class="mr-2">Razão Social</h2>
+          <p-chip>
+            <i class="bi bi-ticket-perforated mr-2"></i>
+            {{ 8411684 }}
+          </p-chip>
+        </div>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci
+          aperiam aspernatur beatae consequatur deserunt dolorem est fuga
+          incidunt iste nam officia placeat quam quidem quisquam reprehenderit,
+          ullam vel veritatis, vero.
+        </p>
+      </div>
     </div>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
-      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
-      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
-      vero.
-    </p>
-  </div>
-  <div class="dados-parceiro col">
-    <div class="dados-contato">
-      <h1>Dados do Contato</h1>
-      <div class="contato-info d-flex flex-row">
-        <i class="pi pi-user"></i>
-        <div>
-          <span class="info-titulo">Nome</span>
-          <br />
-          <span class="info-dados">João</span>
-        </div>
-      </div>
-      <div class="contato-info d-flex flex-row">
-        <i class="pi pi-phone"></i>
-        <div>
-          <span class="info-titulo">Telefone</span>
-          <br />
-          <span class="info-dados">(85) 98553-4200</span>
-        </div>
-      </div>
-      <div class="contato-info d-flex flex-row">
-        <i class="pi pi-at"></i>
-        <div>
-          <span class="info-titulo">E-mail</span>
-          <br />
-          <span class="info-dados">joao@gmail.com</span>
+    <div class="item">
+      <div class="dados-parceiro">
+        <div class="dados-contato">
+          <h1>Dados do Contato</h1>
+          <div></div>
+          <div class="contato-info d-flex flex-row">
+            <i class="pi pi-user"></i>
+            <div>
+              <span class="info-titulo">Nome</span>
+              <br />
+              <span class="info-dados">João</span>
+            </div>
+          </div>
+          <div class="contato-info d-flex flex-row">
+            <i class="pi pi-phone"></i>
+            <div>
+              <span class="info-titulo">Telefone</span>
+              <br />
+              <span class="info-dados">(85) 98553-4200</span>
+            </div>
+          </div>
+          <div class="contato-info d-flex flex-row">
+            <i class="pi pi-at"></i>
+            <div>
+              <span class="info-titulo">E-mail</span>
+              <br />
+              <span class="info-dados">joao@gmail.com</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-<div class="div-ident-parceiro d-flex mt-3">
-  <div class="dados-parceiro col razao-social">
+<div class="div-ident-parceiro d-flex flex-column flex-lg-row mt-3">
+  <div class="dados-parceiro razao-social item ">
     <h2 class="mr-2">
       <i class="bi bi-file-earmark-text"></i>
       Descrição da Não Conformidade
@@ -126,21 +133,17 @@
     </p>
   </div>
   <p-divider layout="vertical"></p-divider>
-  <div class="dados-parceiro col razao-social">
+  <div class="dados-parceiro razao-social item">
     <h2 class="mr-2">
       <i class="pi pi-camera"></i>
       Evidencias fotográficas
     </h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
-      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
-      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
-      vero.
-    </p>
+    <p-carousel>
+    </p-carousel>
   </div>
 </div>
-<div class="div-ident-parceiro d-flex mt-3">
-  <div class="dados-parceiro col razao-social">
+<div class="div-ident-parceiro d-flex  mt-3">
+  <div class="dados-parceiro razao-social item">
     <h2 class="mr-2">
       <i class="bi bi-geo"></i>
       Descrição de Ações Imediatas
@@ -153,16 +156,12 @@
     </p>
   </div>
   <p-divider layout="vertical"></p-divider>
-  <div class="dados-parceiro col razao-social">
+  <div class="dados-parceiro razao-social item">
     <h2 class="mr-2">
       <i class="pi pi-camera"></i>
       Evidencias fotográficas
     </h2>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci aperiam
-      aspernatur beatae consequatur deserunt dolorem est fuga incidunt iste nam
-      officia placeat quam quidem quisquam reprehenderit, ullam vel veritatis,
-      vero.
-    </p>
+    <p-carousel>
+    </p-carousel>
   </div>
 </div>
